--- a/style.css
+++ b/style.css
@@ -7,11 +7,16 @@ body{
     font-family: 'Roboto', Georgia, 'Times New Roman', Times, serif;
 }
 
+.head-container{
+    background-color: #1F2937;
+}
+
 .header{
     display: flex;
     justify-content: space-around;
-    background-color: #1F2937;
+    background-color: #1f29374d;
     padding: 16px;
+    /* position: fixed; */
 }
 
 .logo{
@@ -34,3 +39,57 @@ a{
     color: #E5E7EB;
     font-size: 18px;
 }
+
+.hero-container{
+    display: flex;
+    gap: 2.5%;
+    justify-content: center;
+    padding-top: 60px;
+    padding-bottom: 80px;
+}
+
+.hero-content{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.title-button{
+    border-radius: 7px;
+    width: 100px;
+    height: 30px;
+    background-color: #3882F6;
+    font-weight: bolder;
+    color: #F9FAF8;
+    border: none;
+}
+
+.title{
+    width: 300px;
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8
+}
+
+.below-title{
+    width: 400px;
+    flex-wrap: wrap;
+    font-size: 18px;
+    color: #E5E7EB
+}
+
+.hero-image{
+    background-color: grey;
+    width: 500px;
+    height: 223px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-image p{
+    text-align: center;
+    top: 50%;
+    color: #E5E7EB;
+}
+
