--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     font-family: 'Roboto','Times New Roman', Times, serif;
 }
 
+/* navigation bar*/
 .head-container{
     background-color: #1F2937;
 }
@@ -16,7 +17,6 @@ body{
     justify-content: space-around;
     background-color: #1f29374d;
     padding: 16px;
-    /* position: fixed; */
 }
 
 .logo{
@@ -40,6 +40,7 @@ a{
     font-size: 18px;
 }
 
+/* front or the top container part*/
 .hero-container{
     display: flex;
     gap: 2.5%;
@@ -93,6 +94,8 @@ a{
     color: #E5E7EB;
 }
 
+/* some random information section*/
+
 .mid-container .top{
     display: flex;
     flex-direction: column;
@@ -124,8 +127,87 @@ a{
 }
 
 .illustration{
-    border: 5px solid #3864f6;
+    border: 5px solid #3882F6;
     border-radius: 10px;
     height: 170px;
     width: 150px;
 }
+
+/* quote section*/
+.middle{
+    height: 400px;
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.quote{
+    width: 700px;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: lighter;
+    font-style: italic;
+}
+
+.sign{
+    width: 700px;
+    font-weight: 900;
+    font-size: 24px;
+    color: #1F2937;
+    text-align: right;
+}
+
+
+/* section before the footer */
+.bottom{
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottom .box{
+    display: flex;
+    width: 900px;
+    background-color: #3882F6;
+    border-radius: 7px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.information .heading{
+    font-size: 24px;
+    color: white;
+    font-weight: 900;
+}
+
+.information .content{
+    font-size: 18px;
+    color:  rgb(224, 222, 222);
+    font-weight: 100;
+}
+
+.box .information{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.box .button{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.box button{
+    border-radius: 7px;
+    border: 2px solid white;
+    width: 140px;
+    height: 40px;
+    background-color: #3882F6;
+    font-weight: bolder;
+    color: #F9FAF8;
+    font-size: 18px;
+}
+
+/* footer */ 
